<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserRegistration3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="252dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/edtRegDOB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/racketreadylogo" />

    <EditText
        android:id="@+id/edtRegDOB"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/txtDOB"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listTimes"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="56dp"
        android:choiceMode="multipleChoice"
        app:layout_constraintBottom_toTopOf="@+id/imgRegProfPic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvRegTimes" />

    <TextView
        android:id="@+id/tvRegTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:text="@string/txtPrefTime"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRegDOB" />

    <ImageView
        android:id="@+id/imgRegProfPic"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="29dp"
        app:layout_constraintBottom_toTopOf="@+id/btnReg3Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnImage"
        tools:srcCompat="@drawable/racketreadylogo" />

    <Button
        android:id="@+id/btnCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="43dp"
        android:text="@string/btnRegister"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgRegProfPic" />

    <Button
        android:id="@+id/btnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="71dp"
        android:text="@string/btnImage"
        app:layout_constraintBottom_toBottomOf="@+id/imgRegProfPic"
        app:layout_constraintEnd_toStartOf="@+id/imgRegProfPic"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReg3Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="95dp"
        android:text="@string/btnBack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>